# fs-tools

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  check.bat  check.command  check.sh  check_fs.py  normalize.bat  normalize.command  normalize.sh  normalize_fs.py  pyproject.toml  requirements.txt  ruff.toml  sync.bat  sync.command  sync.sh  sync_fs.py
.claude/rules/: agents-format.md  audit-governor.md  collaboration-boundaries.md  comments-style.md  commit-hygiene.md  config-format.md  consistency.md  cross-platform-safety.md  date-rule.md  docs-consistency-matrix.md  docs-consistency.md  examples.md  external-references.md  imports.md  lazy-import-order.md  naming-symmetry.md  offload-safety.md  path-matching.md  readme-format.md  release-notes.md  rsync-mapping.md  rule-matching.md  rules-sync.md  scheme-format.md  testing.md
.cursor/rules/: agents-format.mdc  audit-governor.mdc  collaboration-boundaries.mdc  comments-style.mdc  commit-hygiene.mdc  config-format.mdc  consistency.mdc  cross-platform-safety.mdc  date-rule.mdc  docs-consistency-matrix.mdc  docs-consistency.mdc  examples.mdc  external-references.mdc  imports.mdc  lazy-import-order.mdc  naming-symmetry.mdc  offload-safety.mdc  path-matching.mdc  readme-format.mdc  release-notes.mdc  rsync-mapping.mdc  rule-matching.mdc  rules-sync.mdc  scheme-format.mdc  testing.mdc
checker/: __init__.py  cli.py  engine.py  log.py  notify.py  pathspec_compat.py  rule.py
examples/: .fs-ignore  CLAUDE.md  README.md  reset.bat  reset.command  reset.sh
examples/checker/: .fs-check  .fs-chk  README.md
examples/normalizer/: .fs-ignore  .fs-nrm  README.md  reset.bat  reset.command  reset.sh
examples/schemer/: .fs-sch.toml  README.md
examples/syncher/: .fs-syn.toml  .fs-sync.toml  README.md
normalizer/: __init__.py  cli.py  filesystem.py  ignore.py  log.py  name.py  pathspec_compat.py  pick_folder.ps1  picker.py  rules.py  safety.py
normalizer/rules/: __init__.py  brackets.py  case.py  date.py  transliteration.py  trim_edge.py
src/fs_tools/: __init__.py  __main__.py  cli.py
syncher/: __init__.py  cli.py  config.py  ignore.py  log.py  notify.py  offload.py  rsync.py
tests/: conftest.py  test_cli.py  test_config.py  test_examples.py  test_ignore.py  test_log.py  test_normalize.py  test_notify.py  test_offload.py  test_picker.py  test_report.py  test_rsync.py
tests/checker/: __init__.py  conftest.py  notify_contract.py  test_engine.py  test_examples.py  test_log.py  test_notify.py  test_rule.py  (+1 more)
(+356 files in other folders)
