[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fs-tools"
version = "0.1.0"
description = "Кросс-платформенные CLI-утилиты работы с файловой системой: нормализация имён и проверка структуры"
requires-python = ">=3.11"
dependencies = ["pathspec>=0.12"]

[project.optional-dependencies]
normalizer = ["Unidecode==1.3.8"]
checker = ["requests>=2.31", "python-dotenv>=1.0"]
dev = ["pytest>=8,<9", "mypy", "ruff", "types-requests", "build"]

[project.scripts]
fs-nrm = "fs_tools.normalizer.runner:main"
fs-chk = "fs_tools.checker.runner:main"
fs-tools = "fs_tools.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fs_tools" = ["py.typed"]
"fs_tools.shared" = ["*.ps1"]

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["unidecode"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
